raffia/tests/error/scss/value/map/invalid-map-key.snap
---
source: raffia/tests/error.rs
---
error: expect token `)`, but `:` received
  ┌─ invalid-map-key.scss:1:18
  │
1 │ $id: inspect((a,b:c)...)
  │                  ^


